--- a/estilo/style.css
+++ b/estilo/style.css
@@ -64,6 +64,7 @@ header > p {
     margin: auto;
     padding-right: 10px;
     padding-left: 10px;
+    padding-bottom: 20px;
     text-shadow: 2px 2px 2px #063d1ea9;
 }
 
